Revision history for Dancer-Plugin-Preprocess-Markdown

{{$NEXT}}

0.020     2013-10-26
          * Repaired request path matching
          * Added support for setting layouts

0.010     2013-10-24
          First version, released on an unsuspecting world.